examples/neg/higher_rank_poly_wrong_arg_type.effekt
def f { g: [A]{ A => A } => Unit }: Unit =
    g { a => a }

def main() = {
    f { [A]{g : A => A } => println(g(42)) }
}